[gd_scene load_steps=3 format=2]

[ext_resource path="res://ButtonTheme.tres" type="Theme" id=1]
[ext_resource path="res://screens/HomeScreen.gd" type="Script" id=2]

[node name="HomeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 400.0
margin_right = -50.0
margin_bottom = -400.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_right = 980.0
margin_bottom = 1360.0

[node name="NewDebitarium" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 980.0
margin_bottom = 123.0
theme = ExtResource( 1 )
text = "NEW DEBITARIUM"

[node name="DebitariumListContainer" type="ScrollContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 980.0
margin_bottom = 727.0
rect_min_size = Vector2( 0, 600 )

[node name="DebitariumList" type="VBoxContainer" parent="CenterContainer/VBoxContainer/DebitariumListContainer"]
margin_right = 980.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3
